<resources>
    <string name="app_name">Flex</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="comment_icon">\uf27a</string>
    <string name="fire_icon">\uf06d</string>
    <string name="share_icon">\uf1e0</string>
    <string name="followers_text">Followers</string>
    <string name="followed_text">Followed</string>
    <string name="already_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="write_comment">Write your comment</string>
    <string name="send">Send</string>
    <string name="publish">Publish</string>
    <string name="get_picture">Get picture</string>
    <string name="take_picture">Take picture</string>
    <string name="enter_email">Enter email</string>
    <string name="send_code_email">Send code on email</string>
    <string name="send_letter_email">Send email</string>
    <string name="code_email">Code from email</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="follow">Follow</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="registration">Registration</string>
    <string name="logout">Logout</string>
    <string name="change_pass">Change password</string>
    <string name="make_post">Make post</string>
    <string name="write_message">Write your message</string>
    <string name="chat">Chat</string>
    <string name="no_posts">There are no posts yet.Subscribe some accounts to see their posts</string>
    <string name="no_chats">There are no chats yet.Start chat with someone and it will appear here</string>
    <string name="enter_chat_name">Enter chat name</string>
    <string name="take_photo">Take photo</string>
    <string name="get_from_gallery">Get photo from gallery</string>
    <string name="add_photo">Add photo</string>
    <string name="posts">posts</string>
    <string name="background">background</string>
    <string name="remove_user">remove user from chat</string>
    <string name="upgrade_user">upgrade user status</string>
    <string name="gps_require">This application requires GPS to work properly, do you want to enable it?</string>
    <string name="unfollow">Unfollow</string>
    <string name="not_connected">Not connected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="failed_connect">Failed to connect</string>
    <string name="sending">Sending</string>
    <string name="sent">Sent</string>
    <string name="not_sent">Not sent</string>
    <string name="failed_send">Failed to send</string>
    <string name="chat_settings">Chat settings</string>
    <string name="go_to_chatroom">Go to chat room button</string>
    <string name="smth_went_wrong">Something went wrong.Please,try again.</string>
    <string name="we_sent_letter">We sent a letter on your Email.Please follow the link and then sign in</string>
    <string name="passwords_different">Passwords are not identical</string>
    <string name="nick_nust_not_empty">Nickname mustn\'t be empty</string>
    <string name="email_must_finish">Email must finish by @gmail.com</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="do_you_want_delete_user_from_chat">Do you really want to delete this user from chat?</string>
    <string name="not_received_email">Not received an E-mail? <u>Click here</u></string>
    <string name="failed_resend_email">Failed to resend email.Try later.</string>
    <string name="chat_added_user">added</string>
    <string name="chat_deleted_user">deleted</string>
    <string name="forgot_password">Forgot password?<u>Click here</u></string>
    <string name="failed_password">Failed to change password.Try again later.</string>
    <string name="error_occurred">An error occurred.</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="get_invite_chat_link">Get invite link</string>
    <string name="generating">Generating</string>
</resources>
