<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_border"
    android:background="@drawable/rounded_corners_top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        style="@style/Text.Gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_border"
        android:text="@string/add_photo" />

    <TextView
        android:id="@+id/take_photo"
        style="@style/Text.Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_border_a_little"
        android:layout_marginBottom="@dimen/margin_border_a_little"
        android:text="@string/take_photo" />

    <TextView
        android:id="@+id/get_photo"
        style="@style/Text.Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_border_a_little"
        android:text="@string/get_from_gallery" />
</LinearLayout>