<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_pass_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enter_email"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enter_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resend_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_email"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/registration_fields"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/enter_email" />

    <Button
        android:id="@+id/resend_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resend_email_text"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="75dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/registration_buttons"
        android:padding="5dp"
        android:text="@string/send_code_email"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/resend_email_text" />


    <TextView
        android:id="@+id/email_must_finish"
        style="@style/Text.Gray.Mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_border_a_little"
        android:text="@string/email_must_finish"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resend_email" />

    <EditText
        android:id="@+id/change_pass_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resend_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/registration_fields"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/code_email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resend_email" />

    <EditText
        android:id="@+id/change_pass_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_pass_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/registration_fields"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/new_password"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_pass_code" />

    <Button
        android:id="@+id/change_pass_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_pass_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/registration_buttons"
        android:padding="5dp"
        android:text="@string/change_password"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_pass_pass" />
    <ProgressBar
        android:id="@+id/requst_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/change_pass_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_border_a_little"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>