<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_app_buttons"
        android:text="@string/logout" />

    <Button
        android:id="@+id/button_change_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_logout"
        android:background="@drawable/main_app_buttons"
        android:text="@string/change_password" />

    <Button
        android:id="@+id/button_make_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_change_pass"
        android:background="@drawable/main_app_buttons"
        android:text="@string/make_post" />

    <Button
        android:id="@+id/button_test_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_change_pass"
        android:background="@drawable/main_app_buttons"
        android:text="Test notification" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_test_notification"
        android:layout_margin="@dimen/margin_border" />

    <Button
        android:id="@+id/resend_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:background="@drawable/main_app_buttons"
        android:text="Resend email" />
</RelativeLayout>