<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/post_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:outlineProvider="background"
    android:background="@drawable/rounded_corners"
    android:orientation="vertical">

    <com.example.flex.SquareImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/main_image"
        app:layout_constraintStart_toStartOf="@id/main_image"
        android:background="@drawable/rounded_top_right_corner_transperent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_icon"
            style="@style/Icon.Mini"/>

        <TextView
            android:id="@+id/user_name"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="200dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/post_text"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_border_a_little"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/below_layout"
        android:autoLink="web"/>

    <RelativeLayout
        android:id="@+id/below_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_border_a_little"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_image">

        <TextView
            android:id="@+id/fire_icon"
            style="@style/TextIconSolid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/fire_icon"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/fire_count"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/fire_icon"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/fire_icon"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comments_icon"
            style="@style/TextIconSolid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/fire_count"
            android:text="@string/comment_icon"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/comments_count"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/fire_icon"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/comments_icon"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/share_icon"
            style="@style/TextIconSolid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/comments_count"
            android:text="@string/share_icon"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/share_count"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/fire_icon"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/share_icon"
            android:textSize="20sp" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>